--- a/index.html
+++ b/index.html
@@ -66,144 +66,144 @@
         <div class="row">
           <div class="col-md-3 mb-3">
             <div class="card">
-               <img src="img/dash_alfabetização.JPG" class="card-img-top" alt="Mapa 2">
+               <img src="img/dash_alfabetização.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">SÉRIE HISTÓRICA ALFABETIZAÇÃO - 1° ANO | (2008 - 2023)</h5>
                 <p class="card-text">dash_alfabetização</p>
                 <p class="card-text"><small class="text-muted">Fonte: SGE/Maracanaú </small></p>
-                <a href="#" class="btn btn-primary" onclick="viewFile('img/dash_alfabetização.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="viewFile('img/dash_alfabetização.png')">Visualizar</a>
                  <a href="https://lookerstudio.google.com/s/rb3WyxemX68" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
           </div>
           <div class="col-md-3 mb-3">
             <div class="card">
-              <img src="img/dash_SPAECE_5_9.JPG" class="card-img-top" alt="Mapa 2">
+              <img src="img/dash_SPAECE_5_9.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">SÉRIE HISTÓRICA SPAECE (2012 - 2023) - 5° | 9° ANO</h5>
                 <p class="card-text">dash_SPAECE_5_9</p>
                 <p class="card-text"><small class="text-muted">Fonte: SPAECE</small></p>
-                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_SPAECE_5_9.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_SPAECE_5_9.png')">Visualizar</a>
                 <a href="https://lookerstudio.google.com/s/hSsqLAOdgyw" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
           </div>
           <div class="col-md-3 mb-3">
             <div class="card">
-              <img src="img/dash_SPAECE_ALFA.JPG" class="card-img-top" alt="Mapa 2">
+              <img src="img/dash_SPAECE_ALFA.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">SÉRIE HISTÓRICA SPAECE-ALFA (2012 - 2023) - 2° ANO</h5>
                 <p class="card-text">dash_SPAECE_ALFA</p>
                 <p class="card-text"><small class="text-muted">Fonte: SPAECE </small></p>
-                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_SPAECE_ALFA.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_SPAECE_ALFA.png')">Visualizar</a>
                 <a href="https://lookerstudio.google.com/s/mPywZi6UR0o" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
           </div>
           <div class="col-md-3 mb-3">
             <div class="card">
-              <img src="img/dash_SAEB.JPG" class="card-img-top" alt="Mapa 2">
+              <img src="img/dash_SAEB.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">SÉRIE HISTÓRICA PROFICIÊNCIA SAEB(2005 - 2021) - 5° / 9° ANO</h5>
                 <p class="card-text">img/dash_SAEB</p>
                 <p class="card-text"><small class="text-muted">Fonte: SAEB/INEP</small></p>
-                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_SAEB.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_SAEB.png')">Visualizar</a>
                  <a href="https://lookerstudio.google.com/s/s9FDJe3t5h0" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
           </div>
           <div class="col-md-3 mb-3">
             <div class="card">
-              <img src="img/dash_IDEB.JPG" class="card-img-top" alt="Mapa 2">
+              <img src="img/dash_IDEB.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">SÉRIE HISTÓRICA NOTA IDEB(2005 - 2021) - 5° / 9° ANO</h5>
                 <p class="card-text">img/dash_IDEB</p>
                 <p class="card-text"><small class="text-muted">Fonte: SAEB/INEP </small></p>
-                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_IDEB.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_IDEB.png')">Visualizar</a>
                  <a href="https://lookerstudio.google.com/s/oTvErsLjvsA" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
           </div>
           <div class="col-md-3 mb-3">
             <div class="card">
-              <img src="dash_OBMEP_nacional.JPG" class="card-img-top" alt="Mapa 2">
+              <img src="dash_OBMEP_nacional.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">SÉRIE HISTÓRICA OBMEP NACIONAL (2005 - 2023) | MUNICÍPIOS DO CEARÁ</h5>
                 <p class="card-text">dash_OBMEP_nacional_municipios</p>
                 <p class="card-text"><small class="text-muted">Fonte: OBMEP</small></p>
-                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_OBMEP_nacional.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_OBMEP_nacional.png')">Visualizar</a>
                  <a href="https://lookerstudio.google.com/s/lXVcGohmCS4" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
           </div>
            <div class="col-md-3 mb-3">
             <div class="card">
-             <img src="img/dash_OBMEP_regional.JPG" class="card-img-top" alt="Mapa 2">
+             <img src="img/dash_OBMEP_regional.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">SÉRIE HISTÓRICA OBMEP REGIONAL 2023 | MUNICÍPIOS DO CEARÁ</h5>
                 <p class="card-text">img/dash_OBMEP_regional</p>
                 <p class="card-text"><small class="text-muted">Fonte: OBMEP</small></p>
-                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_OBMEP_regional.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_OBMEP_regional.png')">Visualizar</a>
                 <a href="https://lookerstudio.google.com/s/v3X7Q4xo0is" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
           </div>
            <div class="col-md-3 mb-3">
             <div class="card">
-              <img src="img/dash_OBMEP_nacional_Maracanaú.JPG" class="card-img-top" alt="Mapa 2">
+              <img src="img/dash_OBMEP_nacional_Maracanaú.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">SÉRIE HISTÓRICA OBMEP NACIONAL (2005 - 2023) | MARACANAÚ</h5>
                 <p class="card-text">img/dash_OBMEP_nacional_Maracanaú</p>
                 <p class="card-text"><small class="text-muted">Fonte: OBMEP</small></p>
-                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_OBMEP_nacional_Maracanaú.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_OBMEP_nacional_Maracanaú.png')">Visualizar</a>
                  <a href="https://lookerstudio.google.com/s/mY_JlphGhGg" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
           </div>
           <div class="col-md-3 mb-3">
             <div class="card">
-              <img src="img/dash_escolas_tempo_integral.JPG" class="card-img-top" alt="Mapa 2">
+              <img src="img/dash_escolas_tempo_integral.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">SERIE HISTÓRICA DE ESCOLAS DE TEMPO INTEGRAL</h5>
                 <p class="card-text">img/dash_escolas_tempo_integral</p>
                 <p class="card-text"><small class="text-muted">Fonte: SPAECE</small></p>
-                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_escolas_tempo_integral.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_escolas_tempo_integral.png')">Visualizar</a>
                  <a href="https://lookerstudio.google.com/s/g3AHLwXP5Zw" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
           </div>
           <div class="col-md-3 mb-3">
             <div class="card">
-              <img src="img/dash_diagnostica_2024_1.JPG" class="card-img-top" alt="Mapa 2">
+              <img src="img/dash_diagnostica_2024_1.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">RESULTADOS AVALIAÇÃO DIAGNÓSTICA 2024.1</h5>
                 <p class="card-text">img/dash_diagnostica_2024_1</p>
                 <p class="card-text"><small class="text-muted">Fonte: SGE/Maracanaú</small></p>
-                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_diagnostica_2024_1.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_diagnostica_2024_1.png')">Visualizar</a>
                 <a href="https://lookerstudio.google.com/s/qVHOPRxEMIg" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
           </div>
           <div class="col-md-3 mb-3">
             <div class="card">
-              <img src="img/dash_diagnostica_2023_1_2_lp_mt.JPG" class="card-img-top" alt="Mapa 2">
+              <img src="img/dash_diagnostica_2023_1_2_lp_mt.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">RESULTADOS AVALIAÇÃO DIAGNÓSTICA 2023.1 / 2023.2</h5>
                 <p class="card-text">img/dash_diagnostica_2023_1_2_lp_mt</p>
                 <p class="card-text"><small class="text-muted">Fonte: SGE/Maracanaú</small></p>
-                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_diagnostica_2023_1_2_lp_mt.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_diagnostica_2023_1_2_lp_mt.png')">Visualizar</a>
                  <a href="https://lookerstudio.google.com/s/tKNBl90KMiQ" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
           </div>
           <div class="col-md-3 mb-3">
             <div class="card">
-              <img src="img/dash_diagnostica_2022_1_lp_mt.JPG" class="card-img-top" alt="Mapa 2">
+              <img src="img/dash_diagnostica_2022_1_lp_mt.png" class="card-img-top" alt="Mapa 2">
               <div class="card-body">
                 <h5 class="card-title">RESULTADOS AVALIAÇÃO DIAGNÓSTICA 2022.1</h5>
                 <p class="card-text">img/dash_diagnostica_2022_1_lp_mt</p>
                 <p class="card-text"><small class="text-muted">Fonte: SGE/Maracanaú</small></p>
-                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_diagnostica_2022_1_lp_mt.JPG')">Visualizar</a>
+                <a href="#" class="btn btn-primary" onclick="showFile('img/dash_diagnostica_2022_1_lp_mt.png')">Visualizar</a>
                  <a href="https://lookerstudio.google.com/s/stqe_B9fPCY" class="btn btn-warning" target="_blank">acessar</a>
               </div>
             </div>
@@ -249,7 +249,7 @@
 
       if (fileType === 'pdf') {
         fileContainer.innerHTML = '<iframe src="' + filePath + '" width="100%" height="500px" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>';
-      } else if (fileType === 'jpeg' || fileType === 'JPG' || fileType === 'png') {
+      } else if (fileType === 'jpeg' || fileType === 'png' || fileType === 'png') {
         fileContainer.innerHTML = '<img src="' + filePath + '" class="img-fluid" oncontextmenu="return false;">';
       }
 
