--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pag_mapas.html">Dahsboards</a>
+              <a class="nav-link" href="#">Dahsboards</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#footer">Contato</a>
